Adding hexo for website

--- a/dollar-docs/src/main/webapp/themes/landscape/layout/_partial/sidebar.ejs
+++ b/dollar-docs/src/main/webapp/themes/landscape/layout/_partial/sidebar.ejs
@@ -1,8 +1,4 @@
-<aside id="sidebar"
-        <% if (theme.sidebar === 'bottom'){ %>
-       class="outer"
-        <% } %>
-        >
+<aside id="sidebar"<% if (theme.sidebar === 'bottom'){ %> class="outer"<% } %>>
   <% theme.widgets.forEach(function(widget){ %>
     <%- partial('_widget/' + widget) %>
   <% }) %>
