--- a/dollar-docs/src/main/webapp/themes/landscape/layout/_partial/after-footer.ejs
+++ b/dollar-docs/src/main/webapp/themes/landscape/layout/_partial/after-footer.ejs
@@ -4,24 +4,21 @@
   <% if (page.permalink){ %>
   var disqus_url = '<%= page.permalink %>';
   <% } %>
-  (
-          function () {
-            var dsq = document.createElement('script');
-            dsq.type = 'text/javascript';
-            dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments) { %>embed.js<% } else { %>count.js<% } %>';
-            (
-            document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]
-            ).appendChild(dsq);
-          }
-  )();
+  (function(){
+    var dsq = document.createElement('script');
+    dsq.type = 'text/javascript';
+    dsq.async = true;
+    dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments) { %>embed.js<% } else { %>count.js<% } %>';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
 </script>
 <% } %>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <% if (theme.fancybox){ %>
-<%- css('fancybox/jquery.fancybox') %>
-<%- js('fancybox/jquery.fancybox.pack') %>
+  <%- css('fancybox/jquery.fancybox') %>
+  <%- js('fancybox/jquery.fancybox.pack') %>
 <% } %>
+
 <%- js('js/script') %>
