--- a/dollar-docs/src/main/webapp/themes/landscape/layout/_partial/head.ejs
+++ b/dollar-docs/src/main/webapp/themes/landscape/layout/_partial/head.ejs
@@ -5,32 +5,23 @@
   <%
   var title = page.title;
 
-  if (is_archive()) {
+  if (is_archive()){
     title = 'Archives';
 
-    if (is_month()) {
+    if (is_month()){
       title += ': ' + page.year + '/' + page.month;
-    } else if (is_year()) {
+    } else if (is_year()){
       title += ': ' + page.year;
     }
-  } else if (is_category()) {
+  } else if (is_category()){
     title = 'Category: ' + page.category;
-  } else if (is_tag()) {
+  } else if (is_tag()){
     title = 'Tag: ' + page.tag;
   }
   %>
-  <title>
-    <% if (title){ %>
-    <%= title %> |
-    <% } %>
-    <%= config.title %></title>
+  <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <%- open_graph({
-                   twitter_id: theme.twitter,
-                   google_plus: theme.google_plus,
-                   fb_admins: theme.fb_admins,
-                   fb_app_id: theme.fb_app_id
-                 }) %>
+  <%- open_graph({twitter_id: theme.twitter, google_plus: theme.google_plus, fb_admins: theme.fb_admins, fb_app_id: theme.fb_app_id}) %>
   <% if (theme.rss){ %>
     <link rel="alternative" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
