Switching to Jekyll ;-)

--- a/dollar-docs/src/main/webapp/_includes/header.html
+++ b/dollar-docs/src/main/webapp/_includes/header.html
@@ -35,6 +35,8 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+        <a class="page-link" href="{{ 'script.html'| prepend: site.baseurl }}">Manual</a>
+        <a class="page-link" href="{{ 'api.html'| prepend: site.baseurl }}">API</a>
       </div>
     </nav>
 
