--- a/dollar-docs/src/main/webapp/_includes/footer.html
+++ b/dollar-docs/src/main/webapp/_includes/footer.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <p class="text"><span style="font-size: 200%" class="devicons devicons-java"></span>{{ site.description }}</p>
       </div>
     </div>
 
