--- a/dollar-docs/src/main/webapp/_includes/header.html
+++ b/dollar-docs/src/main/webapp/_includes/header.html
@@ -18,7 +18,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/"></span> {{ site.title }} </a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -37,6 +37,7 @@
         {% endfor %}
         <a class="page-link" href="{{ 'script.html'| prepend: site.baseurl }}">Manual</a>
         <a class="page-link" href="{{ 'api.html'| prepend: site.baseurl }}">API</a>
+        <a class="page-link" href="http://www.apache.org/licenses/LICENSE-2.0"><span class="devicons devicons-opensource"></span></a>
       </div>
     </nav>
 
