Removed API link

--- a/dollar-docs/src/main/webapp/_includes/header.html
+++ b/dollar-docs/src/main/webapp/_includes/header.html
@@ -36,7 +36,7 @@
           {% endif %}
         {% endfor %}
         <a class="page-link" href="{{ 'script.html'| prepend: site.baseurl }}">Manual</a>
-        <a class="page-link" href="{{ 'api.html'| prepend: site.baseurl }}">API</a>
+        <!--<a class="page-link" href="{{ 'api.html'| prepend: site.baseurl }}">API</a>-->
         <a class="page-link" href="http://www.apache.org/licenses/LICENSE-2.0"><span class="devicons devicons-opensource"></span></a>
       </div>
     </nav>
