--- a/dollar-docs/src/main/webapp/_includes/header.html
+++ b/dollar-docs/src/main/webapp/_includes/header.html
@@ -39,7 +39,7 @@
           {% endif %}
         {% endfor %}
         <a class="page-link" href="{{ 'script.html'| prepend: site.baseurl }}">Manual</a>
-        <a class="page-link" href="http://github.com/neilellis/dollar">GitHub</a>
+        <a class="page-link" href="http://github.com/neilellis/dollar">Source</a>
         <!--<a class="page-link" href="{{ 'api.html'| prepend: site.baseurl }}">API</a>-->
         <a class="page-link" href="http://www.apache.org/licenses/LICENSE-2.0"><span class="devicons devicons-opensource"></span></a>
       </div>
