--- a/dollar-docs/src/main/webapp/_includes/footer.html
+++ b/dollar-docs/src/main/webapp/_includes/footer.html
@@ -23,8 +23,12 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+          <li>
+            <a href="https://gitter.im/neilellis/dollar?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"> <img
+                    src="https://badges.gitter.im/Join Chat.svg"/></a>
+          </li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+
         </ul>
       </div>
 
