Gitter.im integration started.

--- a/dollar-docs/src/main/webapp/_layouts/post.html
+++ b/dollar-docs/src/main/webapp/_layouts/post.html
@@ -28,4 +28,7 @@ layout: default
     {{ content }}
   </article>
 
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <div class="addthis_sharing_toolbox"></div>
+
 </div>
