--- a/dollar-docs/src/main/webapp/_layouts/post.html
+++ b/dollar-docs/src/main/webapp/_layouts/post.html
@@ -30,5 +30,10 @@ layout: default
 
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
   <div class="addthis_sharing_toolbox"></div>
+  <span style="max-width:150px;min-width:100px;display: inline-block;float: right;margin-left:2em">
+        <img src="https://s3-us-west-2.amazonaws.com/tilt-donations/donate_now.png"
+             data-ct-checkout="dollar.supporting-open-source">
+
+    </span>
 
 </div>
