--- a/dollar-docs/src/main/webapp/_includes/header.html
+++ b/dollar-docs/src/main/webapp/_includes/header.html
@@ -21,7 +21,9 @@
                                         data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/"></span> {{ site.title }} </a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img style="margin-top:-4px;margin-right:1em"
+                                                          src="{{ site.baseurl }}/images/logo-32x32.png"/> {{ site.title
+      }} </a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
