--- a/dollar-docs/src/main/webapp/_includes/footer.html
+++ b/dollar-docs/src/main/webapp/_includes/footer.html
@@ -74,4 +74,12 @@
 
 </footer>
 
+<div class="wrapper">
+  <h5 style="opacity: 0.5">
+    &copy; 2014
+    <script>new Date().getFullYear() > 2010 && document.write("-" + new Date().getFullYear());</script>
+    , Neil Ellis - released under ASL 2.0.
+  </h5>
+</div>
+
 <script type="text/javascript" src="https://open.tilt.com/checkout.js"></script>
