--- a/dollar-docs/src/main/webapp/_includes/header.html
+++ b/dollar-docs/src/main/webapp/_includes/header.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -46,6 +46,7 @@
                 {% endif %}
                 {% endfor %}
                 <a class="page-link" href="{{ 'script.html'| prepend: site.baseurl }}">Manual</a>
+                <a class="page-link" href="{{ 'dev'| prepend: site.baseurl }}">Developers</a>
                 <a class="page-link" href="http://github.com/neilellis/dollar">Source</a>
                 <!--<a class="page-link" href="{{ 'api.html'| prepend: site.baseurl }}">API</a>-->
                 <a class="page-link" href="http://www.apache.org/licenses/LICENSE-2.0"><span
