--- a/dollar-docs/src/main/webapp/_includes/header.html
+++ b/dollar-docs/src/main/webapp/_includes/header.html
@@ -1,4 +1,20 @@
 <!--
+  ~    Copyright (c) 2014-2017 Neil Ellis
+  ~
+  ~    Licensed under the Apache License, Version 2.0 (the "License");
+  ~    you may not use this file except in compliance with the License.
+  ~    You may obtain a copy of the License at
+  ~
+  ~          http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~    Unless required by applicable law or agreed to in writing, software
+  ~    distributed under the License is distributed on an "AS IS" BASIS,
+  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~    See the License for the specific language governing permissions and
+  ~    limitations under the License.
+  -->
+
+<!--
   ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,7 +31,7 @@
   -->
 
 <header class="site-header">
-    <a href="https://github.com/neilellis/dollar"><img style="position: absolute; top: 0; right: 0; border: 0;"
+    <a href="https://github.com/sillelien/dollar"><img style="position: absolute; top: 0; right: 0; border: 0;"
                                                        src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67"
                                                        alt="Fork me on GitHub"
                                                        data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
@@ -47,7 +63,7 @@
                 {% endfor %}
                 <a class="page-link" href="{{ 'script.html'| prepend: site.baseurl }}">Manual</a>
                 <a class="page-link" href="{{ 'dev'| prepend: site.baseurl }}">Developers</a>
-                <a class="page-link" href="http://github.com/neilellis/dollar">Source</a>
+                <a class="page-link" href="http://github.com/sillelien/dollar">Source</a>
                 <!--<a class="page-link" href="{{ 'api.html'| prepend: site.baseurl }}">API</a>-->
                 <a class="page-link" href="http://www.apache.org/licenses/LICENSE-2.0"><span
                         class="devicons devicons-opensource"></span></a>
